test/files/neg/interop_typetags_arenot_classtags.check
interop_typetags_arenot_classtags.scala:6: error: No ClassTag available for T
    println(classTag[T])
                    ^
one error found
